Fix overflow bug on index page, modify WorkerBee bio and add transitions to identification page

--- a/app/assets/stylesheets/metrics.css
+++ b/app/assets/stylesheets/metrics.css
@@ -44,6 +44,10 @@
   border-radius: 10px;
 }
 
+#data-table-titles {
+  cursor: default;
+}
+
 #data-table-values {
   cursor: default;
   transition: all 0.3s
